Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/Shadow_Activity__c.object-meta.xml
<CustomObject>
    <description>copy of the standard event record of call tracking record type</description>
    <label>Shadow Activity</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Shadow Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shadow Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>