Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <description>copy of the standard event date field</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>