Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <description>copy of the standard event Time field</description>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>