Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>copy of the standard event description field</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>