Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationInMinutes__c</fullName>
    <description>copy of the standard event duration field</description>
    <label>Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>