Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>WhoId__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>