Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>copy of the standard event end date field</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>