Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>copy of the standard event Is All Day Event field</description>
    <label>All Day Event</label>
    <type>Checkbox</type>
</CustomField>