Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>copy of the standard event Is Private field</description>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>