Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/IsVisibleInSelfService__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInSelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>copy of the standard event Visible in Self-Service field</description>
    <label>Visible in Self-Service</label>
    <type>Checkbox</type>
</CustomField>