Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>copy of the standard event location field</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>