Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>WhoId__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>