Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/ShowAs__c.field-meta.xml
<CustomField>
    <fullName>ShowAs__c</fullName>
    <description>copy of the standard event Show As field</description>
    <label>Show Time As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>