Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>copy of the standard event Start Date Time field</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>