Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - Not Seen</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>