Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>copy of the standard event subject field</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>