Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>copy of the standard event What Id field (relating to accounts)</description>
    <label>Related To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shadow Activities</relationshipLabel>
    <relationshipName>Shadow_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>