Reetan.Nayak Dev 25/force-app/main/default/objects/Shadow_Activity__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>copy of the standard event Who id field (relating to a Contact)</description>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shadow Activities</relationshipLabel>
    <relationshipName>Shadow_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>